need to position mobile social media links, need to fix mobile resume, need to add news to mobile

--- a/app/assets/stylesheets/styles/index.scss
+++ b/app/assets/stylesheets/styles/index.scss
@@ -20,6 +20,7 @@ body {
     width: 100%;
     background-repeat: no-repeat;
     background-color: $main-bg-color;
+    font-family: 'Trykker', serif;
   }
 }
 
@@ -27,9 +28,25 @@ body {
   position: fixed;
   text-align: center;
   z-index: 10;
+  .nav {
+    margin: 5px;
+    li {
+      a{
+        color: $secondary-text-color;
+        font-size: 30px;
+        &:hover{
+          /*background-color: $primary-border-color;*/
+          background-color: #64758c;
+          color: $menu-item-hover;
+        }
+      }
+    }
+  }
 }
 
 #mobileNav{
+  margin: 0;
+  padding: 0;
   z-index: 8;
   background-color: $main-bg-color;
   position: fixed;
@@ -40,9 +57,21 @@ body {
     font-family: 'Niconne', cursive;    
     font-size: 50px;
   }
-  button {
+  .dropdown {
+    margin: 0;
+    padding: 0;
+    .glyphicon.glyphicon-menu-hamburger {
+      font-size: 30px;
+      color: $secondary-bg-color;
+    }
+    .dropdown-menu{
+      font-size: 20px;
+    }
+  }
+  .btn {
     height: 75px;
     width: 75px;
+    background-color: $main-bg-color;
   }
 }
 .modal-backdrop.fade.in {
@@ -64,13 +93,14 @@ body {
 }
 
 #contentUnit{
+  margin: 0;
   padding-left: 0;
   padding-right: 0;
 }
 
 #socialMediaLinks {
-  /*background-color: $primary-border-color;*/
   ul {
+    margin: 0;
     padding: 0;
 
     li{
@@ -88,26 +118,11 @@ body {
   }
 }
 
-.nav {
-  margin: 5px;
-  li {
-    a{
-      color: $secondary-text-color;
-      font-size: 30px;
-      &:hover{
-        /*background-color: $primary-border-color;*/
-        background-color: #64758c;
-        /*color: $header-text-color;*/
-        color: $menu-item-hover;
-      }
-    }
-  }
-}
-
 .row {
   margin: 0;
+  padding: 0;
   h3 {
-    font-family: 'Merienda One', Helvetica, sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     color: $secondary-text-color;
   }
 }
@@ -136,8 +151,6 @@ body {
   img {
     display: block;
     margin: 10px auto;
-    height: 400px;
-    width: auto;
     box-shadow: 5px 5px 5px black;
   }
 }
